[metadata]
name = hw-package
version = 0.0.1
author = Magdalena Rajtor
author_email = m.rajtor@student.uw.edu.pl
description = Package from Python Packaging Exercise
long_description = file: README.rst
url = https://gitlab.mimuw.edu.pl/python-tools/python-packaging-exercise
license = BSD-3-Clause

[options]
packages = find:
python_requires = >=3.6